src/objects/DFC_Activity__c.object
<CustomObject>
    <description>Community Activities linked to a specific Focus Area</description>
    <fields>
        <fullName>Community_Name__c</fullName>
        <formula>Community__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <referenceTo>DFC_Community__c</referenceTo>
        <relationshipName>Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Activity Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DFC Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Community__c</columns>
        <columns>Title__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Community Activities</label>
    </listViews>
    <nameField>
        <displayFormat>DFC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>